turmites.lessons.turmites.langton.Langton.scala.code
def setColor(couleur:Color){
	setBrosseCouleur(Color);
	baisseBrosse();
	leveBrosse();
}



def step() {
	if (getCouleurSol() == Color.white) {
		setColor(Color.black);
		droite();
		avance();
	}else{
		setColor(Color.white);
		gauche();
		avance();
		}
	
}

